[package]
name = "lau-stochastic-processes"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-stochastic-processes"
description = "Stochastic processes library: random walks, martingales, Brownian motion, Poisson processes, Markov chains, Itô calculus, Ornstein-Uhlenbeck, and agent behavioral modeling"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
